--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,9 @@ phases:
     commands:
       - echo "Logging in to Amazon ECR..."
       - aws --version
+      - yum install docker -y
+      - systemctl start docker 
+      - systemctl enable docker      - 
       - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 992382573619.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
