--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,6 @@ phases:
       - echo "Pushing Docker image to Amazon ECR..."
       - docker push 992382573619.dkr.ecr.us-east-1.amazonaws.com/my-flask-app:latest
 artifacts:
-  files:
-    - '**/*'
+    files:
+        - imagedefinitions.json
 
