--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,6 +15,9 @@ phases:
       - echo "Pushing Docker image to Amazon ECR..."
       - docker push 992382573619.dkr.ecr.us-east-1.amazonaws.com/my-flask-app:latest
 artifacts:
-    files:
-        - imagedefinitions.json
+  files:
+    - '**/*'
+  base-directory: base_dir
+  name: build-artifact-name
+  discard-paths: no
 
